--- a/app/src/main/res/layout/list_view_single_item.xml
+++ b/app/src/main/res/layout/list_view_single_item.xml
@@ -7,5 +7,7 @@
 <TextView
     android:id="@+id/tvItem"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content" />
+    android:layout_height="wrap_content"
+    android:textColor="@android:color/black"
+    android:paddingBottom="@dimen/padding_20dp" />
 </LinearLayout>
