--- a/app/src/main/res/layout/list_view_single_item.xml
+++ b/app/src/main/res/layout/list_view_single_item.xml
@@ -9,5 +9,5 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textColor="@android:color/black"
-    android:paddingBottom="@dimen/padding_20dp" />
+    android:padding="@dimen/padding_10dp" />
 </LinearLayout>
