Added details layout file

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,9 +1,176 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/tvGenericName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <ScrollView
+        android:layout_above="@+id/tvBrandName"
+        android:layout_below="@+id/tvGenericName"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/tvCategory"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/padding_5dp"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/padding_1dp"
+                android:background="@color/color_grey">
+            </View>
+            <TextView
+                android:id="@+id/tvDrugClass"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/padding_5dp"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/padding_1dp"
+                android:background="@color/color_grey">
+            </View>
+            <TextView
+                android:id="@+id/tvPharma"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/padding_5dp"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/padding_1dp"
+                android:background="@color/color_grey">
+            </View>
+            <TextView
+                android:id="@+id/tvDailyDose"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/padding_5dp"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/padding_1dp"
+                android:background="@color/color_grey">
+            </View>
+            <TextView
+                android:id="@+id/tvPregnancyEffects"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/padding_5dp"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/padding_1dp"
+                android:background="@color/color_grey">
+            </View>
+            <TextView
+                android:id="@+id/tvLactatingEffects"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/padding_5dp"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/padding_1dp"
+                android:background="@color/color_grey">
+            </View>
+            <TextView
+                android:id="@+id/tvSedation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/padding_5dp"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/padding_1dp"
+                android:background="@color/color_grey">
+            </View>
+            <TextView
+                android:id="@+id/tvWeightGain"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/padding_5dp"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/padding_1dp"
+                android:background="@color/color_grey">
+            </View>
+            <TextView
+                android:id="@+id/tvSideEffects"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/padding_5dp"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/padding_1dp"
+                android:background="@color/color_grey">
+            </View>
+            <TextView
+                android:id="@+id/tvLifeThreatening"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/padding_5dp"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/padding_1dp"
+                android:background="@color/color_grey">
+            </View>
+            <TextView
+                android:id="@+id/tvDrugInteraction"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/padding_5dp"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/padding_1dp"
+                android:background="@color/color_grey">
+            </View>
+            <TextView
+                android:id="@+id/tvTest"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/padding_5dp"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/padding_1dp"
+                android:background="@color/color_grey">
+            </View>
+            <TextView
+                android:id="@+id/tvOverdose"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/padding_5dp"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/padding_1dp"
+                android:background="@color/color_grey">
+            </View>
+            <TextView
+                android:id="@+id/tvExtraInformation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/padding_5dp"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/padding_1dp"
+                android:background="@color/color_grey">
+            </View>
+            <TextView
+                android:id="@+id/tvReference"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/padding_5dp"/>
+        </LinearLayout>
+
+    </ScrollView>
+
+    <TextView
+        android:id="@+id/tvBrandName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"/>
+</RelativeLayout>
