--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#7fcccf</color>
+    <color name="colorPrimaryDark">#61bcc3</color>
+    <color name="backgroundColor">#89d3d4</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="color_grey">#A8A8A8</color>
+    <color name="color_grey">#9E9E9E</color>
 </resources>
