UF preg-Project

--- a/app/src/main/res/layout/fragment_medicare.xml
+++ b/app/src/main/res/layout/fragment_medicare.xml
@@ -18,10 +18,19 @@
 
         <ListView
             android:id="@+id/listView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:padding="@dimen/padding_10dp">
         </ListView>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="39dp"
+            android:layout_height="match_parent"
+            android:id="@+id/side_index">
+
+        </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
