--- a/app/src/main/res/layout/activity_generic.xml
+++ b/app/src/main/res/layout/activity_generic.xml
@@ -1,11 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <ListView
-        android:id="@+id/llGenericList"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="@dimen/padding_10dp"/>
+    android:orientation="horizontal" android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:weightSum="1">
+
+           <ListView
+            android:id="@+id/llGenericList"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="@dimen/padding_10dp">
+        </ListView>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="39dp"
+            android:layout_height="match_parent"
+            android:id="@+id/side_index">
+
+    </LinearLayout>
+
 
 </LinearLayout>
