--- a/app/src/main/res/layout/list_view_single_item.xml
+++ b/app/src/main/res/layout/list_view_single_item.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
-<TextView
+<TextView  xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/tvItem"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textColor="@android:color/black"
-    android:padding="@dimen/padding_10dp"
-    android:textSize="@dimen/text_size_16sp"/>
-</LinearLayout>
+    android:padding="3dp"
+    android:textSize="@dimen/text_size_16sp"
+    android:layout_centerVertical="true"/>
+
+
+
